# jwt-oauth2

./: .coveragerc  .gitignore  .isort.cfg  CHANGELOG.rst  LICENSE  README.rst  pylintrc  setup.cfg  setup.py  tox.ini
jwt_oauth2lib/: __init__.py
jwt_oauth2lib/rfc7523/: __init__.py  errors.py  request_validator.py
jwt_oauth2lib/rfc7523/clients/: __init__.py  assertion_validator.py  jwt_grant_client.py  jwt_grant_request.py
jwt_oauth2lib/rfc7523/endpoints/: __init__.py  pre_configured.py
jwt_oauth2lib/rfc7523/grant_types/: __init__.py  jwt_grant.py
oauth2_jwt_provider/: __init__.py  apps.py  forms.py  models.py  oauth2_validators.py  settings.py  urls.py  validators.py  views.py
oauth2_jwt_provider/management/commands/: _private.py  add_application.py  add_to_developers.py  add_to_trusted.py  allow_skip_authorization.py  revoke_skip_authorization.py
oauth2_jwt_provider/migrations/: 0001_initial.py  0002_dev_group.py
requirements/: common.txt  oauth2_jwt_provider.txt  tests.txt
tests/: models.py
tests/helpers/: __init__.py  fake_token.py  helpers.py
tests/jwt_oauth2lib/rfc7523/: test_request_validator.py
tests/jwt_oauth2lib/rfc7523/clients/: test_assertion_validator.py  test_jwt_grant_request.py
tests/jwt_oauth2lib/rfc7523/endpoints/: test_pre_configured.py
tests/jwt_oauth2lib/rfc7523/grant_types/: test_jwt_grant.py
tests/oauth2_jwt_provider/: settings.py  test_management_commands.py  test_models.py  test_oauth2_validators.py  test_settings.py  test_urls.py  test_validators.py  test_views.py  urls.py
