[metadata]
name=jwt_oauth2
version=0.1
description=JWT OAuth (rfc7523) implementations for oauthlib and Django OAuth Toolkit
author=Fable Turas
author_email=fable@raintechpdx.com
keywords= django, oauth, oauth2, oauthlib, django-oauth-toolkit, jwt
classifiers =
	Development Status ::
	Framework :: Django
	Framework :: Django :: 1.9.5
	Framework :: Django :: 1.11
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules',

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
	django >= 1.8
	oauthlib >= 2.0.1

[options.packages.find]
exclude =
    tests
    docs
    requirements

[bdist_wheel]
universal = 1