[metadata]
name=jwt_oauth2
version=0.1.0a1
description=JWT OAuth (rfc7523) implementations for oauthlib and Django OAuth Toolkit
url=https://github.com/GreenBuildingRegistry/jwt_oauth2
author=Fable Turas
author_email=fable@raintechpdx.com
license='BSD'
keywords= django, oauth, oauth2, oauthlib, django-oauth-toolkit, jwt
classifiers =
	Development Status :: 3 - Alpha
	Framework :: Django
	Framework :: Django :: 1.9.5
	Framework :: Django :: 1.11
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
    Topic :: Internet :: WWW/HTTP
    Topic :: Software Development :: Libraries :: Python Modules,

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
	cryptography>=1.8.1
	oauthlib>=2.0.2
	PyJWT>=1.5.0
	pyOpenSSL>=17.0.0
	pytz

[options.packages.find]
exclude =
    tests
    docs
    requirements

[bdist_wheel]
universal = 1
